# coding-interview

./: .env.sample  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
api/: urls.py
api/migrations/: 0001_initial.py
api/models/: __init__.py  category.py  company.py
api/serializers/: category.py
api/tests/: test_views.py
api/views/: category.py
config/: settings.py
